# ElinMods

./: .gitignore  Directory.Build.props  Directory.Build.targets  ElinMods.sln  README.md  check_elyta.py
ElinUnderworldSimulator/Server/UnderworldServer/: README.md  pyproject.toml
ElinUnderworldSimulator/Server/UnderworldServer/src/underworld_server/: auth.py  cli.py  config.py  database.py  factions.py  jobs.py  main.py  orders.py  players.py  resolution.py  (+3 more)
ElinUnderworldSimulator/Server/UnderworldServer/tests/: __init__.py  conftest.py  helpers.py  test_auth.py  test_factions_player_jobs.py  test_orders_shipments.py
SkyreaderGuildServer/: README.md  auth.py  comet.py  constellations.py  contributions.py  database.py  geometry.py  ladder.py  main.py  pyproject.toml  pytest.ini  requirements.txt  research_notes.py  seasons.py
SkyreaderGuildServer/data/: constellations.json  seasons.json
SkyreaderGuildServer/docs/: phase9_SkyreaderGuild Async Multiplayer – Focused Feature Design (Ladder, Constellations, Geometry, Heatmap, Star Papers, Seasons)_research.md  phase9_async_server_plan_leaderboard.md
SkyreaderGuildServer/src/skyreaderguild_server/: auth.py  cli.py  comet.py  constellations.py  contributions.py  database.py  geometry.py  ladder.py  main.py  research_notes.py  seasons.py
SkyreaderGuildServer/src/skyreaderguild_server/data/: SourceGame_Zone.md  comet_regions.json
SkyreaderGuildServer/tests/: conftest.py  helpers.py  test_comet.py  test_constellations.py  test_geometry.py  test_ladder.py  test_packaging.py  test_research_notes.py  test_seasons.py
(+152 files in other folders)
