[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "underworld-server"
version = "0.1.0"
description = "Bundled FastAPI backend for the Elin Underworld Simulator mod."
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
underworld-server = "underworld_server.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
